clean up benchmark slop